--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    Body
+    {{ with .Params.title }}<h1>{{ . }}</h1>{{ end }}
+    <br>
+    {{ with .Params.bild }}<img src="{{ . }}">{{ end }}
+
     {{ .Content }}
 </body>
 </html>
