--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,8 +2,11 @@
 
     {{ with .Params.title }}<h1>{{ . }}</h1>{{ end }}
     <br>
-    {{ with .Params.bild }}<img src="{{ . }}">{{ end }}
+    {{ with .Params.featured_image }}<img src="{{ . }}">{{ end }}
 
     {{ .Content }}
+
+    <p>layout/default/single.html</p>
+
 
     {{ end }}
