--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
     {{ with .Params.title }}<h1>{{ . }}</h1>{{ end }}
     <br>
-    {{ with .Params.bild }}<img src="{{ . }}">{{ end }}
+    {{ with .Params.featured_image }}<img src="{{ . }}">{{ end }}
 
     {{ .Content }}
 
