--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,46 +1,1 @@
-<p>Listpage</p>
-
-{{ range .Site.RegularPages.ByTitle }}
-    {{ if eq .Params.categories "Marktplatz" }}
-        <p>{{ .Params.categories }}</p>
-        <br>
-        {{ if (resources.GetMatch .Params.featured_image) }}
-            <img src="{{ (resources.GetMatch .Params.featured_image).RelPermalink }}" />
-        {{ end }}
-        <br>
-        {{ .Content }}
-        <h4>{{.Params.tags}}</h4>
-        <br>
-    {{ end }}
-{{ end }}
-<hr>
-{{ range .Site.RegularPages.ByTitle }}
-{{ if eq .Params.categories "Angermuender Strasse" }}
-    <h2>{{.Title}}</h2>
-    <p>{{ .Params.categories }}</p>
-    <br>
-    {{ if (resources.GetMatch .Params.featured_image) }}
-        <img src="{{ (resources.GetMatch .Params.featured_image).RelPermalink }}" />
-    {{ end }}
-    <br>
-    {{ .Content }}
-    <h4>{{.Params.tags}}</h4>
-    <br>
-{{ end }}
-{{ end }}
-<hr>
-{{ range .Site.RegularPages.ByTitle }}
-{{ if eq .Params.categories "Oberkietz" }}
-    <h2>{{.Title}}</h2>
-    <p>{{ .Params.categories }}</p>
-    <br>
-    {{ if (resources.GetMatch .Params.featured_image) }}
-        <img src="{{ (resources.GetMatch .Params.featured_image).RelPermalink }}" />
-    {{ end }}
-    <br>
-    {{ .Content }}
-    <h4>{{.Params.tags}}</h4>
-    <br>
-{{ end }}
-{{ end }}
-
+<p>Listpage Default</p>
