--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,10 +10,10 @@
 
     {{ $date := now }}
     {{ $author := "Horst Kippowski"}}
-    {{ if .GitInfo }}
+    {{- if .GitInfo -}}
         {{ $date = .GitInfo.AuthorDate }}
         {{ $author = .GitInfo.AuthorName }}
-    {{ end }}
+    {{- end -}}
     <div>
      zuletzt geändert am {{- $date.Format "January 02, 2006" -}} von {{ $author }}
     </div>
