--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,1 +1,51 @@
-<p>Listpage Default</p>
+<p>Listpage-{{.Page.Params.title}}</p>
+
+{{range where $.Site.RegularPages.ByWeight "Section" .Page.Params.title }}
+        <p>{{ .Params.categories }}</p>
+        <p>{{ .Params.weight }}</p>
+        <br>
+        {{ if (resources.GetMatch .Params.featured_image) }}
+            <img src="{{ (resources.GetMatch .Params.featured_image).RelPermalink }}" />
+        {{ end }}
+        <br>
+        {{ .Content }}
+          <br>
+          <ul id="tags">
+            <h3>Einschlägige Tags</h3>
+            {{ range .Params.tags }}
+              <li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
+            {{ end }}
+          </ul>
+            <br>          
+          <ul>
+            <h3>Alle Tags</h3>
+            {{ range .Site.Taxonomies.tags }}
+                    <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> {{ .Count }}</li>
+            {{ end }}
+        </ul>
+          
+        <br>
+{{ end }}
+
+
+
+<section>
+    <ul>
+      {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
+        <li><a href="{{ "/" | relLangURL}}{{ $taxonomyname | urlize }}">{{ $taxonomyname }}</a>
+          <ul>
+            {{ range $key, $value := $taxonomy }}
+            <li> {{ $key }} </li>
+                  <ul>
+                  {{ range $value.Pages }}
+                      <li hugo-nav="{{ .RelPermalink}}"><a href="{{ .Permalink}}"> {{ .LinkTitle }} </a> </li>
+                  {{ end }}
+                  </ul>
+            {{ end }}
+          </ul>
+        </li>
+      {{ end }}
+    </ul>
+  </section>
+  
+
