--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
-  <div class="container">
-    <h1>All {{ .Type }}</h1>
+  <div>
+    <h1>Mit Vorlage taxonomy.html</h1>
+    <h3>All {{ .Type }}</h3>
     <ul>
       {{ range .Data.Pages }}
         <li>
