--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,9 @@
 <footer>
     <h3>Footer</h3>
+    <ul>
+      {{ range .Site.Taxonomies.tags }}
+              <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> ({{ .Count }} mal erwähnt)</li>
+      {{ end }}
+  </ul>
   </footer>
   
