--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,14 @@
 <nav>
-    <ul>
-        {{ range .Site.Menus.main }}
-        <li>
-            <a href="{{ .URL }}">
-            <span>{{ .Name }}</span></a>
-        </li>
-    {{ end }}
-      </ul>
+    <input type="checkbox" id="active">
+      <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
+      <div class="wrapper">
+        <ul>
+            {{ range .Site.Menus.main }}
+            <li>
+                <a href="{{ .URL }}">
+                <span>{{ .Name }}</span></a>
+            </li>
+            {{ end }}
+        </ul>
+      </div>
 </nav>
