--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
-<footer>
+<footer id="bottom-footer">
+<div class="container" style="background-color: #ccc ;">
     <h3>Footer</h3>
-   
-  </footer>
+</div>   
+</footer>
   
