--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,17 +1,19 @@
 {{ define "main" }}
-
+<div class="container">
     {{ with .Params.title }}<h1>{{ . }}</h1>{{ end }}
     <br>
     {{ if (resources.GetMatch .Params.featured_image) }}
         <img src="{{ (resources.GetMatch .Params.featured_image).RelPermalink }}" />
     {{ end }}
-
+    <br>
+    <br>
     {{ .Content }}
-
+    <br>
     <ul id="tags">
         {{ range .Params.tags }}
           <li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
         {{ end }}
+        <br>
       </ul>
       
 
@@ -20,4 +22,5 @@
     {{ $update := .Page.Date }}
     <small class="text-muted">Letzte Aktualisierung {{ $update.Format "02.01.2006" }}</small>
 
-    {{ end }}
+    </div>
+{{ end }}
