--- a/layouts/_default/term.html
+++ b/layouts/_default/term.html
@@ -1,11 +1,14 @@
 {{ define "main" }}
-  <div>
+  <div class="container">
     <h1>Mit Vorlage term.html</h1>
+    <br>
     <h3>All posts for {{ .Type | singularize }} "{{ .Title }}"</h3>
-    <ul>
+    <br>
+    <ul class="tags">
       {{ range .Data.Pages }}
         <li>
           <a href="{{ .Permalink }}">{{ .Title }}</a>
+          <br>
         </li>
       {{ end }}
     </ul>
