--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,11 @@
 {{ define "main" }}
-
+<div class="container">
     {{ with .Params.title }}<h1>{{ . }}</h1>{{ end }}
     <br>
     {{ with .Params.featured_image }}<img src="{{ . }}">{{ end }}
-
+    <br>
+    <br>
     {{ .Content }}
-
-    {{ end }}
+    <br>
+</div>
+{{ end }}
