--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,5 +5,5 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="/favicon.ico"/>
-<link href="/style.css" rel="stylesheet"/>
+<link rel="stylesheet" href="/style.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
