--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,4 +1,6 @@
 <nav>
+  <div class="container">
+    <a class="navbar-brand" href="/"> <img src="/Wappen_Oderberg_100.png" alt="Wappen" id="wappen"> <span id="wappentext">Oderberg/Mark</span> </a>
     <input type="checkbox" id="active">
       <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
       <div class="wrapper">
@@ -11,4 +13,5 @@
             {{ end }}
         </ul>
       </div>
+  </div>
 </nav>
