--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,5 +7,9 @@
     <br>
     {{ .Content }}
     <br>
+    {{ $update := .Page.Date }}
+    <small class="text-muted">Letzte Aktualisierung {{ $update.Format "02.01.2006" }}</small>
+
 </div>
+
 {{ end }}
